# py-html-renderer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/py_html_renderer/: __init__.py
src/py_html_renderer/application/: renderer_factory.py
src/py_html_renderer/domain/: exceptions.py  ports.py  renderer.py
src/py_html_renderer/infrastructure/: jinja_engine.py  sass_compiler.py
tests/functional/: test_rendering_flow.py
tests/integration/application/: test_renderer_factory.py
tests/integration/infrastructure/: test_jinja_engine.py  test_sass_compiler.py
tests/unit/domain/: test_renderer.py
tests/unit/infrastructure/: test_jinja_engine.py  test_sass_compiler.py
